{
  "version": 4,
  "terraform_version": "0.13.5",
  "serial": 98,
  "lineage": "479eb6c6-da83-ed8c-701e-bca4cfcadf01",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-07b088180713edaf8",
            "domain": "vpc",
            "id": "eipalloc-0a7f437cdafd9d524",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0bc6fea3d50e78926",
            "private_dns": "ip-10-0-0-4.ec2.internal",
            "private_ip": "10.0.0.4",
            "public_dns": "ec2-18-235-149-132.compute-1.amazonaws.com",
            "public_ip": "18.235.149.132",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0739f8cdb239fe9ae",
            "arn": "arn:aws:ec2:us-east-1:073263193312:instance/i-0b6469a35aa025b58",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b6469a35aa025b58",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0ea6f1110d8a91594",
            "private_dns": "ip-10-0-0-11.ec2.internal",
            "private_ip": "10.0.0.11",
            "public_ip": "54.211.140.101",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-09f9afdd46c771b45",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0026250cce9ebb299",
            "tags": {
              "Name": "bastion-instance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0f3fff564fe5dc166"
            ]
          },
          "dependencies": [
            "aws_security_group.allow-ssh",
            "aws_subnet.public-subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "private-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0739f8cdb239fe9ae",
            "arn": "arn:aws:ec2:us-east-1:073263193312:instance/i-0c93d68dd452585d1",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c93d68dd452585d1",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-037a14e666eff80cc",
            "private_dns": "ip-10-0-0-21.ec2.internal",
            "private_ip": "10.0.0.21",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-00fc6da127dd83d76",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-018af0d933d4258d7",
            "tags": {
              "Name": "private-instance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0f3fff564fe5dc166"
            ]
          },
          "dependencies": [
            "aws_security_group.allow-ssh",
            "aws_subnet.private-subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:073263193312:internet-gateway/igw-069688c0e953dae8b",
            "id": "igw-069688c0e953dae8b",
            "owner_id": "073263193312",
            "tags": {
              "Name": "internet-gw"
            },
            "vpc_id": "vpc-01b73ff9245e8b8e3"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a7f437cdafd9d524",
            "id": "nat-00b166a2c34ecf8dd",
            "network_interface_id": "eni-0bc6fea3d50e78926",
            "private_ip": "10.0.0.4",
            "public_ip": "18.235.149.132",
            "subnet_id": "subnet-0026250cce9ebb299"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.internet-gw",
            "aws_subnet.public-subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0750a3d0370e0e446",
            "owner_id": "073263193312",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-00b166a2c34ecf8dd",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "vpc_id": "vpc-01b73ff9245e8b8e3"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.internet-gw",
            "aws_nat_gateway.nat-gw",
            "aws_subnet.public-subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-091c99588b8f0b81c",
            "owner_id": "073263193312",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-069688c0e953dae8b",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "vpc_id": "vpc-01b73ff9245e8b8e3"
          },
          "dependencies": [
            "aws_internet_gateway.internet-gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07c57b8d4c9493fac",
            "route_table_id": "rtb-0750a3d0370e0e446",
            "subnet_id": "subnet-018af0d933d4258d7"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.internet-gw",
            "aws_nat_gateway.nat-gw",
            "aws_route_table.private-rt",
            "aws_subnet.private-subnet",
            "aws_subnet.public-subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09f0e37b372107fc4",
            "route_table_id": "rtb-091c99588b8f0b81c",
            "subnet_id": "subnet-0026250cce9ebb299"
          },
          "dependencies": [
            "aws_internet_gateway.internet-gw",
            "aws_route_table.public-rt",
            "aws_subnet.public-subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:073263193312:security-group/sg-0f3fff564fe5dc166",
            "description": "security group that allows ssh and all egress traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f3fff564fe5dc166",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow-ssh",
            "name_prefix": "",
            "owner_id": "073263193312",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow-ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-01b73ff9245e8b8e3"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:073263193312:subnet/subnet-018af0d933d4258d7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.16/28",
            "id": "subnet-018af0d933d4258d7",
            "map_public_ip_on_launch": false,
            "owner_id": "073263193312",
            "tags": {
              "Name": "private-subnet"
            },
            "vpc_id": "vpc-01b73ff9245e8b8e3"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:073263193312:subnet/subnet-0026250cce9ebb299",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/28",
            "id": "subnet-0026250cce9ebb299",
            "map_public_ip_on_launch": true,
            "owner_id": "073263193312",
            "tags": {
              "Name": "public-subnet"
            },
            "vpc_id": "vpc-01b73ff9245e8b8e3"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:073263193312:vpc/vpc-01b73ff9245e8b8e3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/27",
            "default_network_acl_id": "acl-045b44c6dc502d61f",
            "default_route_table_id": "rtb-0ecdda389218c0f4f",
            "default_security_group_id": "sg-011f354fd3973586e",
            "dhcp_options_id": "dopt-d33640a9",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-01b73ff9245e8b8e3",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0ecdda389218c0f4f",
            "owner_id": "073263193312"
          }
        }
      ]
    }
  ]
}